--- a/THANKS
+++ b/THANKS
@@ -47,4 +47,4 @@ Ka-Hing Cheung <kcheung@riverbed.com>
     Contributed code to show custom thread names.
 
 Igor Bazhitov <ibazhitov@parallels.com>
-    Contributed the differentiation between total and actual I/O.
+    Contributed the differentiation between total and current I/O.
