Add support to cgroups
This is useful to perform per-container I/O monitoring (e.g., LXC)

--- a/iotop.8
+++ b/iotop.8
@@ -57,6 +57,9 @@ A list of processes/threads to monitor (all by default).
 \fB\-u\fR USER, \fB\-\-user\fR=\fIUSER\fR
 A list of users to monitor (all by default)
 .TP
+\fB\-g\fR CGROUP, \fB\-\-cgroup\fR=\fICGROUP\fR
+A list of cgroups to monitor (all by default)
+.TP
 \fB\-P\fR, \fB\-\-processes\fR
 Only show processes. Normally iotop shows all threads.
 .TP
