--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+This is a modified version to work with containers (e.g., LXC). It shows the
+cgroup's name of each process and allows for per-container I/O monitoring.
+
 Iotop is a Python program with a top like UI used to show of behalf of which
 process is the I/O going on. It requires Python >= 2.7 and a Linux kernel >=
 2.6.20 with the CONFIG_TASK_DELAY_ACCT CONFIG_TASKSTATS,
